--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -15,7 +15,7 @@ jobs:
   release-snapshot-x86_64:
     name: Release Snapshot (x86_64)
     runs-on: 
-      - graas_ami-0f4881c8d69684001_${{ github.event.number }}-${{ github.run_id }}
+      - graas_ami-0f4881c8d69684001_${{ github.event.number }}${{ github.run_attempt }}-${{ github.run_id }}
       - EXECUTION_TYPE=LONG
     permissions:
       contents: read
@@ -59,7 +59,7 @@ jobs:
     name: Release Snapshot (aarch64)
     needs: [ release-snapshot-x86_64 ]
     runs-on: 
-      - graas_ami-03217ce7c37572c4d_${{ github.event.number }}-${{ github.run_id }}
+      - graas_ami-03217ce7c37572c4d_${{ github.event.number }}${{ github.run_attempt }}-${{ github.run_id }}
       - EXECUTION_TYPE=LONG
     permissions:
       contents: read
