fix: make only goTemplate mandatory in webhook config
tracee up to 0.20.0 builds the flags with query delimiters, even for
fragment. This fix allows to only set the goTemplate query without other
fragments, making the URL parsable.

Signed-off-by: Nicolas Degory <nicolas.degory@gmail.com>

--- a/deploy/helm/tracee/templates/tracee-config.yaml
+++ b/deploy/helm/tracee/templates/tracee-config.yaml
@@ -45,11 +45,13 @@ data:
                 protocol: {{ .protocol | default "http" }}
                 host: {{ .host | default "localhost" }}
                 port: {{ .port | default "8080" }}
-                timeout: {{ .timeout | default "3s" }}
-                {{- if .goTemplate }}
-                gotemplate: {{ .goTemplate }}
+                {{ if .timeout }}
+                timeout: {{ .timeout }}
                 {{- end }}
-                content-type: {{ .contentType | default "application/json" }}
+                gotemplate: {{ .goTemplate }}
+                {{- if .contentType }}
+                content-type: {{ .contentType }}
+                {{- end }}
         {{- end }}
     {{- if .Values.config.blobPerfBufferSize }}
     blob-perf-buffer-size: {{ .Values.config.blobPerfBufferSize}}
