fix: add missing nodeSelector and tolerations to tracee-operator deployment
Signed-off-by: Nicolas Degory <nicolas.degory@gmail.com>

--- a/deploy/helm/tracee/templates/deploy.yaml
+++ b/deploy/helm/tracee/templates/deploy.yaml
@@ -39,4 +39,16 @@ spec:
           httpGet:
             path: /healthz
             port: {{ trimPrefix ":" .Values.operator.healthProbeBindAddress }}
+      {{- with .Values.operator.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
