--- a/deploy/helm/tracee/values.yaml
+++ b/deploy/helm/tracee/values.yaml
@@ -101,3 +101,6 @@ operator:
   serviceAccount:
     name: "tracee-operator"
   healthProbeBindAddress: :8081
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
