fix: add missing imagePullSecrets for tracee-operator
Signed-off-by: Nicolas Degory <nicolas.degory@gmail.com>

--- a/deploy/helm/tracee/templates/deploy.yaml
+++ b/deploy/helm/tracee/templates/deploy.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         app: {{ include "tracee-operator.fullname" . }}
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       serviceAccountName: {{ include "tracee-operator.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
