--- a/.github/workflows/debug-shell.yaml
+++ b/.github/workflows/debug-shell.yaml
@@ -36,7 +36,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -49,7 +49,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -62,7 +62,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -75,7 +75,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -88,7 +88,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -101,7 +101,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -114,7 +114,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -127,7 +127,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -140,7 +140,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -153,7 +153,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -166,7 +166,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -179,7 +179,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -192,7 +192,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -205,7 +205,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -218,7 +218,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -231,7 +231,7 @@ jobs:
     timeout-minutes: 50400
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -243,7 +243,7 @@ jobs:
       - EXECUTION_TYPE=LONG
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
@@ -255,7 +255,7 @@ jobs:
       - EXECUTION_TYPE=LONG
     steps:
       - name: "Checkout"
-        uses: actions/checkout@v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           submodules: true
       - name: "Executing Debug Shell"
