fix: option webhook value on helm
If uses helm chart to install Tracee, the '--output' key need to be
separeted from value 'webhook' in order to work as excepted.

--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -36,7 +36,8 @@ spec:
             - --config
             - /tracee/config.yaml
           {{- if .Values.webhook }}
-            - --output webhook:{{ .Values.webhook }}
+            - --output
+            - webhook:{{ .Values.webhook }}
           {{- end }}
           env:
             - name: LIBBPFGO_OSRELEASE_FILE
