fix(perf): add kubeconfig fetch

--- a/.github/workflows/performance.yaml
+++ b/.github/workflows/performance.yaml
@@ -43,7 +43,10 @@ jobs:
       - name: Run Benchmark
         env:
           PR_REPO: ${{ secrets.AWS_PR_IMAGE_ECR_REPO }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          PERF_CLUSTER: ${{ secrets.PERF_CLUSTER_NAME }}
         run: |
+          aws eks update-kubeconfig --region $AWS_REGION --name my-cluster
           ./performance/benchmark/network/bench.sh $PR_REPO:$GITHUB_SHA
       # Download previous benchmark result from cache (if exists)
       - name: Download previous benchmark data
