--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -18,7 +18,7 @@ USER root
 RUN apk --no-cache update && \
     apk --no-cache add coreutils && \
     apk --no-cache add sudo curl && \
-    apk --no-cache add libelf zlib && \
+    apk --no-cache add libelf zlib zstd && \
     apk --no-cache add libc6-compat
 
 # install OPA
@@ -47,6 +47,7 @@ RUN apk --no-cache update && \
     apk --no-cache add elfutils-dev && \
     apk --no-cache add libelf-static && \
     apk --no-cache add zlib-static && \
+    apk --no-cache add zstd-static && \
     rm -f /usr/bin/cc && \
     rm -f /usr/bin/clang && \
     rm -f /usr/bin/clang++ && \
