feat(performance.yaml): clean up images post build
Images were previously uncleaned, causing disk storage buildup on the
runner. Prevent this by cleaning the image after publishing.

--- a/.github/workflows/performance.yaml
+++ b/.github/workflows/performance.yaml
@@ -40,6 +40,7 @@ jobs:
           docker tag tracee:latest $PR_REPO:$GITHUB_SHA
           docker push $PR_REPO:$GITHUB_SHA
           docker logout $REPO
+          docker rmi tracee:latest $PR_REPO:$GITHUB_SHA
   network-benchmark:
     name: Network Performance Gate
     needs:
