chore: install required bpftool from btfhub
commit: d2cd2c3 (main), cherry-pick

--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -86,12 +86,7 @@ RUN apk --no-cache update && \
 RUN cd /tmp && \
     git clone https://github.com/aquasecurity/btfhub.git && \
     cd ./btfhub && \
-    git submodule update --init --recursive 3rdparty/bpftool && \
-    cd ./3rdparty/bpftool && \
-    make -C src clean && \
-    make -C src all && \
-    cp ./src/bpftool /usr/sbin/bpftool && \
-    make -C src clean
+    ./3rdparty/bpftool.sh
 
 #
 # tracee-make
