feat(events): add e2e for ftrace_hook

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -65,6 +65,7 @@ env:
     VFS_WRITE
     FILE_MODIFICATION
     HOOKED_SYSCALL
+    FTRACE_HOOK
     SECURITY_INODE_RENAME
     BPF_ATTACH
     CONTAINERS_DATA_SOURCE
