--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -6,6 +6,14 @@ ARG BTFHUB=0
 ARG FLAVOR=tracee-ebpf-core
 
 #
+# Version
+#
+
+ARG GO_VERSION=1.22.0
+ARG OPA_VERSION=v0.63.0
+
+
+#
 # tracee-base
 #
 
@@ -22,9 +30,9 @@ RUN apk --no-cache update && \
     apk --no-cache add libc6-compat
 
 # install OPA
-
+ARG OPA_VERSION
 RUN altarch=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
-    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.63.0/opa_linux_${altarch}_static && \
+    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/${OPA_VERSION}/opa_linux_${altarch}_static && \
     chmod 755 /usr/bin/opa
 
 #
@@ -41,7 +49,7 @@ RUN apk --no-cache update && \
     apk --no-cache add bash git rsync && \
     apk --no-cache add coreutils findutils && \
     apk --no-cache add llvm14 clang14 && \
-    apk --no-cache add go make gcc && \
+    apk --no-cache add make gcc && \
     apk --no-cache add musl-dev && \
     apk --no-cache add linux-headers && \
     apk --no-cache add elfutils-dev && \
@@ -81,6 +89,17 @@ RUN apk --no-cache update && \
     ln -s /usr/lib/llvm14/bin/llvm-readelf /usr/bin/llvm-readelf && \
     ln -s /usr/lib/llvm14/bin/opt /usr/bin/opt
 
+# install GO
+ARG GO_VERSION
+RUN altarch=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
+    curl -L -o go${GO_VERSION}.linux-${altarch}.tar.gz https://go.dev/dl/go${GO_VERSION}.linux-${altarch}.tar.gz && \
+    tar -C /usr/local -xzf go${GO_VERSION}.linux-${altarch}.tar.gz && \
+    echo 'export PATH=$PATH:/usr/local/go/bin' >> /etc/profile && \
+    echo 'export GOROOT=/usr/local/go' >> /etc/profile && \
+    echo 'export GOPATH=$HOME/go' >> /etc/profile && \
+    echo 'export GOTOOLCHAIN=auto' >> /etc/profile && \
+    echo 'export PATH=$PATH:$GOPATH/bin' >> /etc/profile
+
 # install bpftool from btfhub
 
 RUN cd /tmp && \
@@ -101,7 +120,8 @@ WORKDIR /tracee
 
 COPY . /tracee
 
-RUN make clean && \
+RUN source /etc/profile && \
+    make clean && \
     BTFHUB=$BTFHUB make tracee && \
     BTFHUB=$BTFHUB make tracee-ebpf && \
     make tracee-rules && \
