chore(ci): use dev tag for docker image building
When SNAPSHOT=1, the local docker image will be tagged with dev tag to
differentiate it from the official release which is tagged with the
latest tag.

--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -160,7 +160,7 @@ release: \
 	$(MAKE) -f builder/Makefile.tracee-make alpine-prepare
 	$(MAKE) -f builder/Makefile.tracee-make alpine-make ARG="clean"
 #
-	BTFHUB=1 $(MAKE) -f builder/Makefile.tracee-container build-tracee
+	BTFHUB=1 SNAPSHOT=$(SNAPSHOT) $(MAKE) -f builder/Makefile.tracee-container build-tracee
 #
 # build binaries (tracee, tracee-ebpf, tracee-rules, rules)
 #
