--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -56,6 +56,7 @@ RUN apk --no-cache update && \
     apk --no-cache add libelf-static && \
     apk --no-cache add zlib-static && \
     apk --no-cache add zstd-static && \
+    apk --no-cache add binutils-gold && \
     rm -f /usr/bin/cc && \
     rm -f /usr/bin/clang && \
     rm -f /usr/bin/clang++ && \
