chore(build): trigger tracee tests on Makefile changes

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,6 +20,7 @@ on:
       - "docs/man/**"
       - "go.mod"
       - "go.sum"
+      - "Makefile"
       - "**.c"
       - "**.h"
       - "**.go"
