--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -151,11 +151,14 @@ USER root
 ENV HOME=/tracee
 WORKDIR /tracee
 
+RUN apk --no-cache add mandoc
+
 COPY --from=tracee-make /tracee/dist/tracee /tracee
 COPY --from=tracee-make /tracee/dist/tracee-ebpf /tracee
 COPY --from=tracee-make /tracee/dist/tracee-rules /tracee
 COPY --from=tracee-make /tracee/dist/tracee-operator /tracee
 COPY --from=tracee-make /tracee/dist/signatures/ /tracee/signatures/
+COPY --from=tracee-make /tracee/docs/man/ /tracee/docs/man/
 COPY --from=tracee-make /tracee/builder/entrypoint.sh /tracee/entrypoint.sh
 COPY --from=tracee-make /tracee/cmd/tracee-rules/templates/ /tracee/templates/
 
